examples/parser.js
// Generated by Peggy 3.0.2.
//
// https://peggyjs.org/
(function(root) {
  "use strict";


function generateUUID() {
    let uuid = 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
        let r = Math.random() * 16 | 0,
        v = c === 'x' ? r : (r & 0x3 | 0x8);
        return v.toString(16);
    });
    return uuid;
}


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "@tree";
  var peg$c1 = "->";
  var peg$c2 = "@eval";
  var peg$c3 = "@@eval";
  var peg$c4 = "@match";
  var peg$c5 = ";";
  var peg$c6 = "|";
  var peg$c7 = "@choice";
  var peg$c8 = "@jump";
  var peg$c9 = "@return";
  var peg$c10 = " ";
  var peg$c11 = ":";
  var peg$c12 = "#";
  var peg$c13 = "#!";
  var peg$c14 = "-";
  var peg$c15 = "_";
  var peg$c16 = "<>";
  var peg$c17 = "true";
  var peg$c18 = "false";
  var peg$c19 = "<<";
  var peg$c20 = ">>";
  var peg$c21 = "\"";

  var peg$r0 = /^[\r\t]/;
  var peg$r1 = /^[a-zA-Z]/;
  var peg$r2 = /^[a-zA-Z0-9]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[ \t\n\r]/;
  var peg$r5 = /^[^\0-\x1F"\\]/;

  var peg$e0 = peg$literalExpectation("@tree", false);
  var peg$e1 = peg$otherExpectation("action sequence");
  var peg$e2 = peg$literalExpectation("->", false);
  var peg$e3 = peg$otherExpectation("action");
  var peg$e4 = peg$otherExpectation("action body");
  var peg$e5 = peg$otherExpectation("evaluate action");
  var peg$e6 = peg$literalExpectation("@eval", false);
  var peg$e7 = peg$literalExpectation("@@eval", false);
  var peg$e8 = peg$otherExpectation("match action");
  var peg$e9 = peg$literalExpectation("@match", false);
  var peg$e10 = peg$literalExpectation(";", false);
  var peg$e11 = peg$otherExpectation("match option");
  var peg$e12 = peg$literalExpectation("|", false);
  var peg$e13 = peg$classExpectation(["\r", "\t"], false, false);
  var peg$e14 = peg$otherExpectation("choice action");
  var peg$e15 = peg$literalExpectation("@choice", false);
  var peg$e16 = peg$otherExpectation("choice option");
  var peg$e17 = peg$otherExpectation("jump action");
  var peg$e18 = peg$literalExpectation("@jump", false);
  var peg$e19 = peg$otherExpectation("return action");
  var peg$e20 = peg$literalExpectation("@return", false);
  var peg$e21 = peg$literalExpectation(" ", false);
  var peg$e22 = peg$otherExpectation("dialogue action");
  var peg$e23 = peg$literalExpectation(":", false);
  var peg$e24 = peg$otherExpectation("character name");
  var peg$e25 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e26 = peg$otherExpectation("dialogue text");
  var peg$e27 = peg$otherExpectation("modifiers");
  var peg$e28 = peg$otherExpectation("modifier");
  var peg$e29 = peg$literalExpectation("#", false);
  var peg$e30 = peg$literalExpectation("#!", false);
  var peg$e31 = peg$otherExpectation("literal");
  var peg$e32 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false);
  var peg$e33 = peg$literalExpectation("-", false);
  var peg$e34 = peg$literalExpectation("_", false);
  var peg$e35 = peg$otherExpectation("value");
  var peg$e36 = peg$otherExpectation("string");
  var peg$e37 = peg$literalExpectation("<>", false);
  var peg$e38 = peg$otherExpectation("basic string");
  var peg$e39 = peg$otherExpectation("variable");
  var peg$e40 = peg$otherExpectation("integer");
  var peg$e41 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e42 = peg$otherExpectation("boolean");
  var peg$e43 = peg$literalExpectation("true", false);
  var peg$e44 = peg$literalExpectation("false", false);
  var peg$e45 = peg$otherExpectation("evaluation");
  var peg$e46 = peg$literalExpectation("<<", false);
  var peg$e47 = peg$literalExpectation(">>", false);
  var peg$e48 = peg$otherExpectation("whitespace");
  var peg$e49 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e50 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false);
  var peg$e51 = peg$otherExpectation("quotation mark");
  var peg$e52 = peg$literalExpectation("\"", false);

  var peg$f0 = function(trees) { return trees};
  var peg$f1 = function(tree_name, tree_body) {
	return {
    	"tree":tree_name,
        "tree_body":tree_body
    }
};
  var peg$f2 = function(action_head, tail) {
    return [action_head].concat(tail)
};
  var peg$f3 = function(modifiers, action_body) {	
    let id_modifier = modifiers.find(m => m.modifier === "id")
    const {blocking, ...rest_action_body} = action_body;
    let blocking_modifier = modifiers.find(m => m.modifier === "block")
    let blocking_val = blocking === undefined? false : blocking 
    if (blocking_modifier) {
        blocking_val = blocking_modifier["value"]["value"]
    }
    return {
        "modifiers":modifiers,
        "action":rest_action_body,
        "blocking": blocking_val,
        "id": id_modifier? id_modifier["value"]["value"].toString() : generateUUID()
    }
};
  var peg$f4 = function(eval_value) {
	return {
    	"action_type":"eval_action",
        "blocking":false,
        "eval_value": eval_value
    }
};
  var peg$f5 = function(eval_value) {
	return {
    	"action_type":"eval_action",
        "blocking": true,
        "eval_value": eval_value
    }
};
  var peg$f6 = function(match_value, match_body) {
    return {
    	"action_type":"match_action",
        "blocking":false,
        "match_value":match_value,
        "match_body":match_body
    }
};
  var peg$f7 = function(match_value, action_sequence) {
    return {
        "match_value":match_value,
        "action_sequence": action_sequence
    }    
};
  var peg$f8 = function(choice_body) {
    return {
    	"action_type":"choice_action",
        "blocking":true,
        "choice_body":choice_body
    }
};
  var peg$f9 = function(modifiers, choice_text, action_sequence) {
	let id_modifier = modifiers.find(m => m.modifier === "id");
    return {
        "choice_text":choice_text,
        "modifiers":modifiers,
        "action_sequence": action_sequence,
        "id": id_modifier? id_modifier["value"]["value"].toString() : generateUUID()
    }    
};
  var peg$f10 = function(jump_to) {
    return {
    	"action_type":"jump_action",
        "blocking":false,
        "jump_to":jump_to
    }
};
  var peg$f11 = function(return_value) {
    return {
    	"action_type":"return_action",
        "return_value":return_value
    }
};
  var peg$f12 = function(dlg_text) {
	return {
    	"action_type":"dialogue_action",
        "blocking":true,
        "character_name":null,
        "dialogue": dlg_text
    }
};
  var peg$f13 = function(character_name, dialogue) {
    return {
    	"action_type":"dialogue_action",
        "character_name":character_name,
        "dialogue":dialogue
    }
};
  var peg$f14 = function(chars) {return chars.join("")};
  var peg$f15 = function(modifiers) {
	return modifiers
};
  var peg$f16 = function(modifier_name, value) {
	return {
    	"modifier":modifier_name,
        "value": value
    }
};
  var peg$f17 = function(modifier_name) {
    return {
    	"modifier":modifier_name,
        "value": true
    }
};
  var peg$f18 = function(modifier_name) {
    return {
    	"modifier":modifier_name,
        "value": false
    }
};
  var peg$f19 = function(literal) { 
        return literal.join("");
};
  var peg$f20 = function(str1, str2) {
    return {
        "value_type": "dynamic",
        "type": "glued_string",
        "str1": str1,
        "str2": str2
    }
};
  var peg$f21 = function(chars) { 
   	return {
        "value_type":"static",
        "type": "string",
        "value": chars.join("")
    }
};
  var peg$f22 = function(literal) { 
        return {
        "value_type":"dynamic",
        "type": "literal",
        "value": literal.join("")
    }
};
  var peg$f23 = function() { 
        return {
        "value_type":"static",
        "type": "int",
        "value":parseInt(text(), 10)
    }
};
  var peg$f24 = function(v) {
	return {
        "value_type":"static",
        "type": "bool",
        "value":v === "true"
    }
};
  var peg$f25 = function(code) {
    return {
        "value_type":"eval",
        "func_id":code.join("")
    }
};
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parseTreeDefinition();
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s3 = s4;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    if (s3 !== peg$FAILED) {
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseTreeDefinition();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTreeDefinition() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLiteral();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        s4 = peg$parseActionSequence();
        if (s4 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s2, s4);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseActionSequence() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseAction();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parse_();
      if (input.substr(peg$currPos, 2) === peg$c1) {
        s5 = peg$c1;
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parse_();
        s7 = peg$parseAction();
        if (s7 !== peg$FAILED) {
          s3 = s7;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parse_();
        if (input.substr(peg$currPos, 2) === peg$c1) {
          s5 = peg$c1;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          s7 = peg$parseAction();
          if (s7 !== peg$FAILED) {
            s3 = s7;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f2(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }

    return s0;
  }

  function peg$parseAction() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    s1 = peg$parseModifiers();
    s2 = peg$parse_();
    s3 = peg$parseActionBody();
    if (s3 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f3(s1, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }

    return s0;
  }

  function peg$parseActionBody() {
    var s0, s1;

    peg$silentFails++;
    s0 = peg$parseDialogueAction();
    if (s0 === peg$FAILED) {
      s0 = peg$parseJumpAction();
      if (s0 === peg$FAILED) {
        s0 = peg$parseReturnAction();
        if (s0 === peg$FAILED) {
          s0 = peg$parseMatchAction();
          if (s0 === peg$FAILED) {
            s0 = peg$parseChoiceAction();
            if (s0 === peg$FAILED) {
              s0 = peg$parseEvalAction();
            }
          }
        }
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }

    return s0;
  }

  function peg$parseEvalAction() {
    var s0, s1, s2, s3;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e6); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseEval();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 6) === peg$c3) {
        s1 = peg$c3;
        peg$currPos += 6;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$parseEval();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }

    return s0;
  }

  function peg$parseMatchAction() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseValue();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = [];
        s6 = peg$currPos;
        s7 = peg$parseMatchOption();
        if (s7 !== peg$FAILED) {
          s8 = peg$parse_();
          s6 = s7;
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
        if (s6 !== peg$FAILED) {
          while (s6 !== peg$FAILED) {
            s5.push(s6);
            s6 = peg$currPos;
            s7 = peg$parseMatchOption();
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_();
              s6 = s7;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          }
        } else {
          s5 = peg$FAILED;
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (input.charCodeAt(peg$currPos) === 59) {
            s7 = peg$c5;
            peg$currPos++;
          } else {
            s7 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e10); }
          }
          if (s7 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f6(s3, s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e8); }
    }

    return s0;
  }

  function peg$parseMatchOption() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
